# SpaceGame

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: CelestialBody.cpp.DF3B1080F3573A11.idx  CelestialBody.h.F22DEB098E476CEE.idx  Game.cpp.E27D90A7977B7767.idx  Game.h.381942A240546CBB.idx  Trajectories.cpp.77835BF5FE925716.idx  Trajectories.h.A130180204B4A5CA.idx  cgltf.h.C8AAFB3C5EDF173E.idx  config.h.EC87810F8F90F24C.idx  context.c.0F3CF6B5EDC198FF.idx  cyber.h.699A0F6C4971DF82.idx  dr_mp3.h.4B52E5145CD4B2AD.idx  dr_wav.h.EC70E22B2421A991.idx  egl_context.c.E6CEC0F57E8AA309.idx  egl_context.h.78CD535E31C6717A.idx  glad.h.8A72ADAD78AA2F82.idx  glfw3.h.726DCB92469BDB58.idx  glfw3native.h.D9E3E55A16005711.idx  glx_context.c.AEFBDCEDFF35F3A0.idx  glx_context.h.81E9E9ACB23E5CAB.idx  init.c.75B49518E247B94F.idx  input.c.E97D8BF33FBEC76D.idx  internal.h.DF2167100B41893B.idx  jar_mod.h.4D77B4456D688604.idx  jar_xm.h.36093985E78533FB.idx  linux_joystick.c.9112E888D06CC451.idx  linux_joystick.h.75DD334D49C6DF85.idx  main.cpp.940CE35DCFEC7A4C.idx  mappings.h.F41596A4A7058D88.idx  miniaudio.h.893651EF0367A108.idx  monitor.c.5BE9F336A1176CEE.idx  msf_gif.h.5B01FAB9D2151F5B.idx  osmesa_context.c.4256FED4964F7CDB.idx  osmesa_context.h.A3DFC72DEC51C192.idx  par_shapes.h.2F4F8009FC2FBFC8.idx  posix_thread.c.49CD44081F3793D0.idx  posix_time.c.A4225E4DABA411A1.idx  (+35 more)
libs/raylib/: Makefile
resources/shader/: bloom.frag  bloom.fs  bloom.glsl
src/: CelestialBody.cpp  Game.cpp  Trajectories.cpp  main.cpp
src/include/: CelestialBody.cpp  CelestialBody.h  Game.h  Trajectories.h  cyber.h
(+4 files in other folders)
